# autoMudae

./: .gitmodules  CMakeLists.txt  configure.bat  main.yml
.github/workflows/: main.yml
src/: CMakeLists.txt  Main.cpp  chars_file.cpp  discord_client.cpp  files.cpp  find_process.cpp  get_discordToken.cpp
src/include/automudae/: chars_file.h  discord_client.h  discord_hook.h  files.h  find_process.h  find_process.inl
src/res/: autoMudae.aps
